section game is done

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
     <section class="game">
       <div class="container">
-        <h2 class="section-title">GAMES</h2>
+        <h2 class="section-title game__title">GAMES</h2>
         <div class="game__inner">
           <div class="game__descr">
             <p class="game__descr-title">
@@ -206,7 +206,7 @@
             <p class="game__item-text">
               Climb anything. Fight everywhere. Experience battle royale only possible in VR
             </p>
-            <a class="game__item-linkp" href="#">
+            <a class="game__item-link" href="#">
               see more
             </a>
           </div>
@@ -220,13 +220,17 @@
               new workouts
               every day.
             </p>
-            <a class="game__item-linkp" href="#">
+            <a class="game__item-link" href="#">
               see more
             </a>
           </div>
         </div>
       </div>
     </section>
+
+    <div class="buy">
+      
+    </div>
 
 
   </main>
