--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
 </head>
 
 <body>
-
+  
   <header class="header">
     <div class="container">
       <nav class="nav">
+        <button class="menu-btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
         <ul class="menu">
           <li class="menu__list">
             <a class="menu__link" href="#">SHOP</a>
@@ -56,7 +61,7 @@
         <p class="buy__text">Meta Quest 2 is for ages 13+</p>
       </div>
     </section>
-
+    
     <section class="features">
       <div class="container">
         <div class="features__titles">
@@ -171,7 +176,7 @@
         </div>
       </div>
     </section>
-
+ 
     <section class="game">
       <div class="container">
         <h2 class="section-title game__title">GAMES</h2>
@@ -377,7 +382,7 @@
         </div>
       </div>
     </section>
-
+  
     <footer class="footer">
       <div class="container">
         <nav class="nav">
@@ -417,7 +422,7 @@
           </ul>
         </nav>
       </div>
-    </footer>
+    </footer> 
 
   </main>
 
